# lifeos

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BETA_PROGRAM.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  FINAL_STATUS.md  GEMINI.md  LICENSE  Makefile  NOTICE  PHASE45_SUMMARY.md  PHASE4_SUMMARY.md  PROJECT_STATUS.md  README.md  ROADMAP.md  TESTING_CONVENTIONS.md  verify-phase4.sh  verify-phase45.sh  verify-truth-alignment.sh
.claude/: settings.local.json
.github/: changelog-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-review.yml  build.yml  ci.yml  codeql.yml  docker.yml  docs-drift.yml  e2e-tests.yml  nightly.yml  quadlet-syntax-check.yml  release-channels.yml  release.yml  side-images.yml  truth-alignment.yml
build-assets/wheels/: README.md
channels/: edge.json  stable.json
cli/: Cargo.toml
cli/assets/models/v1/: catalog.json  catalog.json.sig
cli/src/: daemon_client.rs  lib.rs  main.rs  main_tests.rs  main_tests.rs.bak  main_tests.rs.fixed
cli/src/ascii/: axi.rs  mod.rs
cli/src/commands/: accessibility.rs  adapters.rs  agents.rs  ai.rs  assistant.rs  audit.rs  battery.rs  browser.rs  capsule.rs  computer_use.rs  config.rs  context.rs  doctor.rs  first_boot.rs  focus.rs  followalong.rs  id.rs  init.rs  intents.rs  lab.rs  memory.rs  mesh.rs  mod.rs  mode.rs  onboarding.rs  overlay.rs  permissions.rs  portal.rs  recover.rs  rollback.rs  safe_mode.rs  skills.rs  soul.rs  status.rs  store.rs  sync.rs  telemetry.rs  theme.rs  update.rs  visual_comfort.rs  (+3 more)
cli/src/config/: mod.rs  tests.rs
cli/src/system/: mod.rs  tests.rs
containers/lifeos-lifeosd/: Containerfile  README.md  lifeos-lifeosd.container
containers/lifeos-llama-embeddings/: Containerfile  README.md  lifeos-llama-embeddings.container
containers/lifeos-llama-server/: Containerfile  README.md  lifeos-llama-server.container
containers/lifeos-net/: lifeos-net.network
containers/lifeos-simplex-bridge/: Containerfile  README.md  lifeos-simplex-bridge.container
containers/lifeos-tts/: Containerfile  README.md  build-kokoro-manifest.py  lifeos-tts-server.py  lifeos-tts.container
contracts/onboarding/: first-boot-config.schema.json
daemon/: Cargo.toml
daemon/defaults/: config.toml
daemon/examples/: food_db_sample.csv
daemon/src/: accessibility.rs  agent_loop.rs  agent_roles.rs  agent_runtime.rs  ai.rs  ai_runtime_profile.rs  app_contracts.rs  async_workers.rs  atspi_layer.rs  audio_frontend.rs  autonomous_agent.rs  axi_tools.rs  axi_tray.rs  backup_monitor.rs  battery_manager.rs  browser_automation.rs  calendar.rs  cdp_client.rs  circuit_breaker.rs  comm_bridges.rs  computer_use.rs  config_store.rs  config_validator.rs  connector_registry.rs  context_policies.rs  control_layers.rs  cosmic_control.rs  desktop_operator.rs  discord_bridge.rs  email_bridge.rs  endpoints.rs  ergonomics.rs  events.rs  exec_whitelist.rs  experience_modes.rs  eye_health.rs  follow_along.rs  food_lookup.rs  game_assistant.rs  game_guard.rs  (+70 more)
daemon/src/api/: conversations.rs  finanzas.rs  freelance.rs  lab.rs  mod.rs  privacy_mode.rs  providers.rs  proyectos.rs  vehiculos.rs  viajes.rs  vida_plena.rs  workers.rs
daemon/src/health/: health_tests.rs
daemon/src/models/: mod.rs
daemon/src/notifications/: notifications_tests.rs
daemon/src/nutrition/: extractor.rs  mod.rs
daemon/src/single_instance/: single_instance_tests.rs
daemon/src/updates/: updates_tests.rs
daemon/static/dashboard/: app.js  index.html  style.css
desktop/: Cargo.toml  clippy.toml
desktop/src/: bootstrap.rs  daemon_client.rs  main.rs  supervisor.rs  tray.rs  wake_word.rs
docs/: AI_MODEL_SELECTION.md  APP_STORE.md  ARCHITECTURE_FIRST_BOOT.md  BETA_TESTING.md  BOOTC_LIFEOS_PLAYBOOK.md  CICD_ARCHITECTURE.md  CI_CD.md  FIREFOX_HARDENED.md  GTK4_OVERLAY_COMPLETED.md  GTK4_OVERLAY_IMPLEMENTATION.md  HARDWARE_COMPATIBILITY.md  ICONS.md  INSTALLATION.md  LIFEOS_PHASE_SOP.md  LIFEOS_UNIFIED_STRATEGY.md  LLM_ACCESS_STRATEGY.md  MODES_COMPLETED.md  NVIDIA_SECURE_BOOT.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE1_IMPLEMENTATION_STATUS.md  PHASE1_PROGRESS_SUMMARY.md  PROJECT_STATE.md  README.md  Reconstruir imagen y generar ISO.md  SYSTEM_ADMIN.md  TESTING.md  TESTING_STRATEGY.md  THEMES.md  UPDATE_STABLE_PRIVATE_QUICKSTART.md  USER_GUIDE.md  V2_PENDIENTES.md  axi-brand-guidelines.md  contributor-guide.md  deepin_comparison.md  design-tokens.md  lifeos-ai-distribution.md  lifeos_biological_model.md  night-mode-validation.md  openclaw_analysis.md  threat_model_stride.md  (+2 more)
docs/OpenClaw/: 01-repository-map.md  02-core-runtime-and-gateway.md  03-agent-runtime-context-and-tools.md  04-plugin-and-extension-system.md  05-channels-pairing-and-routing.md  09-packaging-and-ops.md  11-contracts-build-and-code-governance.md  12-runtime-bootstrap-and-distribution-paths.md  13-gateway-control-plane-deep-dive.md  (+5 more)
docs/operations/: tts.md  (+16 more)
evidence/: phase-2-2.5-closeout-checklist.md
image/: Containerfile
scripts/: ai-review.py  assert-no-dev-artifacts.sh  assert-no-piper.sh  beta-feedback.sh  build-iso-with-model.sh  build-iso-without-model.sh  build-iso.sh  bump-version.sh  check-brand-compliance.sh  check-coverage-ratchet.sh  check-daemon-prereqs.sh  check-dead-code.sh  check-event-consumers.sh  check-orphan-routes.sh  check-truth-alignment.sh  ci-scope-aware.sh  create-recovery-kit.sh  cve-slo-enforce.py  distrobox-dev-setup.sh  fix_main_tests.py  generate-final-icons.sh  generate-iso-simple.sh  generate-iso.sh  generate-missing-icons.sh  generate-remaining-icons.sh  generate-symbolic-icons.sh  generate_brand_assets.sh  generate_wake_word_model.sh  lifeos-dev-bootstrap.sh  local-ci.sh  optimize-wallpapers.py  phase3-hardening-checks.sh  phase4-sensory-checks.sh  phase45-model-lifecycle-checks.sh  postdeploy-overlay-cleanup.sh  pre-push-gate.sh  rasterize-icons.sh  setup-gh-credentials.sh  setup-nvidia-signing-secrets.sh  setup-self-hosted-runner.sh  (+10 more)
security/: cve_slo_policy.json
tests/: Cargo.toml  security_tests.sh
(+302 files in other folders)
