[workspace]
members = [
    "cli",
    "daemon",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.7.5"

[workspace.metadata.lifeos]
codename = "Axolotl"
theme_marker_epoch = "cosmic-v2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
