[package]
name = "life"
version.workspace = true
edition = "2021"
description = "LifeOS system CLI"
authors = ["Héctor Martínez <hector@hectormr.com>"]
license = "Apache-2.0"
homepage = "https://hectormr.com"
repository = "https://github.com/hectormr206/lifeos"

[[bin]]
name = "life"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
colored = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "6"
chrono = "0.4"
log = "0.4"
futures = "0.3"
dialoguer = "0.11"
shellexpand = "3"
libc = "0.2"
sha2 = "0.10"
num_cpus = "1.16"
fastrand = "2"
# hyper-util promoted to direct dep for UDS transport (Phase 8b).
# Already transitively present via reqwest 0.12 at 0.1.x;
# pinning the same version prevents duplicate compile units.
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
hyper = { version = "1", features = ["http1"] }
http-body-util = "0.1"
tower-service = "0.3"
bytes = "1"

[dev-dependencies]
tempfile = "3"
mockall = "0.12"
