[package]
name = "lifeosd"
version = "0.1.0"
edition = "2021"
description = "LifeOS System Daemon"
authors = ["LifeOS Team"]
license = "Apache-2.0"

[[bin]]
name = "lifeosd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["clock", "serde"] }
notify-rust = "4"
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["tokio"], optional = true }
sysinfo = "0.30"
zbus = { version = "4", default-features = false, features = ["tokio"], optional = true }
async-trait = "0.1"
futures-lite = "2.3.0"
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
num_cpus = "1.16"
# GTK4 and UI dependencies
gtk4 = { version = "0.9", features = ["v4_16"], optional = true }
glib = { version = "0.20", features = ["v2_80"], optional = true }
adw = { version = "0.7", package = "libadwaita", optional = true }
# Screen capture dependencies
image = "0.25"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
[features]
default = ["dbus", "http-api"]
dbus = ["zbus"]
http-api = ["axum"]
ui-overlay = ["gtk4", "glib"]
