[package]
name = "lifeosd"
version = "0.3.25"
edition = "2021"
description = "LifeOS System Daemon"
authors = ["Héctor Martínez <hector@hectormr.com>"]
license = "Apache-2.0"
homepage = "https://hectormr.com"
repository = "https://github.com/hectormr206/lifeos"

[[bin]]
name = "lifeosd"
path = "src/main.rs"

[[bin]]
name = "lifeos-train-wakeword"
path = "src/bin/train_wakeword.rs"
required-features = ["wake-word"]

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["clock", "serde"] }
iana-time-zone = "0.1"
notify-rust = { version = "=4.12.0", default-features = false, features = ["d"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"
axum = { version = "0.7", features = ["tokio", "ws"], optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
async-stream = "0.3"
sysinfo = "0.30"
zbus = { version = "4", default-features = false, features = ["tokio"], optional = true }
atspi = { version = "0.22", optional = true }
async-trait = "0.1"
futures-lite = "2.3.0"
futures-util = "0.3"
tokio-tungstenite = { version = "0.29", features = ["connect"] }
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
num_cpus = "1.16"
# GTK4 and UI dependencies (keep version requirements compatible with CI runners)
gtk4 = { version = "0.9", optional = true }
glib = { version = "0.20", optional = true }
adw = { version = "0.7", package = "libadwaita", optional = true }
# Screen capture dependencies
image = "0.25"
base64 = "0.22"
shell-words = "1"
libc = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm-siv = "0.11"
sha2 = "0.10"
rand = "0.8"
# Reinforced encryption (BI.4/6/9.2/12) — passphrase-derived key with KDF.
# Argon2id is the OWASP-recommended password hash; zeroize wipes derived
# key material from memory on lock.
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
sqlite-vec = "0.1"
zerocopy = "0.8"
# Telegram bot
teloxide = { version = "0.13", features = ["macros"], optional = true }
# Wake word detection (half pinned to avoid rand 0.8/0.9 conflict with candle-core 0.2)
half = "=2.4.1"
rustpotter = { version = "3", optional = true, default-features = false }
# Speaker identification — uses external lifeos-speaker-embedding script (Python + onnxruntime)
# No Rust ONNX dependency needed; matching/profile logic is pure Rust.
# MCP (Model Context Protocol) client — disabled until rustc 1.88+ in CI
# rust-mcp-sdk requires cookie_store 0.22 which needs rustc 1.88
# Our MCP server (mcp_server.rs) uses hand-written JSON-RPC, no SDK needed
# Uncomment when CI runner has rustc >= 1.88:
# rust-mcp-sdk = { version = "0.9", optional = true }
# System tray icon (StatusNotifierItem — works with COSMIC, KDE, GNOME+extension)
ksni = { version = "0.2", optional = true }
# COSMIC desktop control (GPL-3.0 — only compiled with "cosmic" feature)
cosmic-protocols = { version = "0.2", optional = true, default-features = false, features = ["client"] }
cosmic-client-toolkit = { version = "0.2", optional = true }
wayland-client = { version = "0.31", optional = true }
[features]
default = ["dbus", "http-api"]
dbus = ["zbus", "atspi"]
http-api = ["axum", "tower-http"]
ui-overlay = ["gtk4", "glib", "adw"]
cosmic = ["cosmic-protocols", "cosmic-client-toolkit", "wayland-client"]
wake-word = ["rustpotter"]
speaker-id = []
# mcp-client = ["rust-mcp-sdk"]  # disabled until rustc 1.88+ in CI
telegram = ["teloxide"]
homeassistant = []
tray = ["ksni"]
